--- a/html/index.html
+++ b/html/index.html
@@ -4,11 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Reservia</title>
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <!--Logo-Navigation-->
+    <header>
+        <nav>
+            <img src="/images/logo/Reservia.svg" alt="logo">
+            <ul class="nav_menu">
+                <li class= "anchor_accomodation">Hébergements</li>
+                <li class="anchor_activities">Activités</li>
+                <li class="registration">S'inscrire</li>
+            </ul>
+        </nav>
+    </header>
+
+<!--Search-Filters-->
+<div class="Search">
+    <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
+    <p>En plein centre ville</p>
+    <button></button>
+    <div></div>
+
+</div>
+
+    <main>
+        <div class="Accomodation">
+            <h2>Hébergements</h2>
+        </div>
+        <div class="most_popular">
+            <h2>Les plus populaires</h2>
+        </div>
+        <div class="activities">
+            <h2>Activités à Marseille</h2>
+        </div>
+        </main> 
+
+<!--Footer-->
+    <footer>
+        <div class="footer_items">
+            <div class="about">
+                <h3>A propos</h3>
+                <ul>
+                    <li><a href="#">Fonctionnement du site</a></li>
+                    <li><a href="#">Conditions générales de vente</a></li>
+                    <li><a href="#">Données et confidentialité</a></li>
+                </ul>
+            </div>
+            <div class="footer_accomodations">
+                <h3>Nos hébergements</h3>
+                <ul>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
+                </ul>
+            </div>
+            <div class="assistance">
+                <h3>Assistance</h3>
+                <ul>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
