Balisage html, ajout des textes

--- a/html/index.html
+++ b/html/index.html
@@ -27,19 +27,97 @@
     <p>En plein centre ville</p>
     <button></button>
     <div></div>
+    <p>Plus de 500 logements disponibles dans cette ville</p>
 
 </div>
 
+<!--Main_content-->
     <main>
-        <div class="Accomodation">
+        <!--Accomodation-->
+        <section class="Accomodation">
             <h2>Hébergements</h2>
-        </div>
-        <div class="most_popular">
+            <ul class="Accomodation_bloc">
+                <li class="Accomodation_bloc1">
+                    <img src="" alt="">
+                    <h3>Auberge la Cannebière</h3>
+                    <p>Nuit à partir de 25€</p>
+                    <i></i>
+                </li>
+                <li class="Accomodation_bloc2">
+                    <img src="" alt="">
+                    <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de 52€</p>
+                    <i></i>
+                </li>
+                <li class="Accomodation_bloc3"> 
+                    <img src="" alt="">
+                    <h3>Hôtel Les Mouettes</h3>
+                    <p>Nuit à partir de 76€</p>
+                    <i></i>
+                </li>
+                <li class="Accomodation_bloc4">
+                    <img src="" alt="">
+                    <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de 46€</p>
+                    <i></i>
+                </li>
+                <li class="Accomodation_bloc5">  
+                    <img src="" alt="">
+                    <h3>Hôtel Le Panier</h3>
+                    <p>Nuit à partir de 23€</p>
+                    <i></i>
+                </li>
+                <li class="Accomodation_bloc6">
+                    <img src="" alt="">
+                    <h3>Hôtel chez Aminar</h3>
+                    <p>Nuit à partir de 96€</p>
+                    <i></i>
+                </li>
+            </ul>
+        </section>
+        <!--Most_popular-->
+        <section class="most_popular">
             <h2>Les plus populaires</h2>
-        </div>
-        <div class="activities">
+            <ul class="most_popular_bloc">
+                <li class="most_popular_bloc1">
+                    <img src="" alt="">
+                    <h3>Hôtel Le soleil du matin</h3>
+                    <p>Nuit à partir de 128€</p>
+                    <i></i></li>
+                <li class="most_popular_bloc2">
+                    <img src="" alt="">
+                    <h3>Au coeur de l'eau Chambre d'hôtes</h3>
+                    <p>Nuit à partir de 71€</p>
+                    <i></i>
+                </li>
+                <li class="most_popular_bloc3">
+                    <img src="" alt="">
+                    <h3></h3>
+                    <p>Nuit à partir de 68€</p>
+                    <i></i>
+                </li>
+            </ul>
+        </section>
+        <!--Activities-->
+        <section class="activities">
             <h2>Activités à Marseille</h2>
-        </div>
+            <div class="activities_bloc1">
+                <img src="" alt="">
+                <h3>Vieux Port</h3>
+                <img src="" alt="">
+                <h3>Fort de Pomègues</h3>
+                <img src="" alt="">
+                <h3>Îles du Frioul</h3>
+            </div>
+            <div class="activities_bloc2"></div>
+            <img src="" alt="">
+                <h3>Parc National des Calanques</h3>
+                <img src="" alt="">
+                <h3>Notre-Dame-de-la-Garde</h3>
+                <img src="" alt="">
+                <h3>Parc Longchamp</h3>
+        </section>
+        
         </main> 
 
 <!--Footer-->
