--- a/html/index.html
+++ b/html/index.html
@@ -9,23 +9,28 @@
 </head>
 
 <body>
-    <!--Logo-Navigation-->
+    <!--Logo_Navigation-->
     <header>
         <nav>
             <img src="/images/logo/Reservia.svg" alt="logo">
             <ul class="nav_menu">
-                <li class= "anchor_accomodation">Hébergements</li>
-                <li class="anchor_activities">Activités</li>
+                <li class= "anchor_accomodation"> 
+                    <a href="#accomodation">Hébergements</a>
+                </li>
+                <li class="anchor_activities"></li>
+                    <a href="#activities">Activités</a>
                 <li class="registration">S'inscrire</li>
             </ul>
         </nav>
     </header>
 
-<!--Search-Filters-->
+<!--Search_Filters-->
 <div class="Search">
     <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
     <p>En plein centre ville</p>
-    <button></button>
+    <form method="post" action="traitement.php">
+        <p>Marseille, France</p>
+     </form>
     <div></div>
     <p>Plus de 500 logements disponibles dans cette ville</p>
 
@@ -34,73 +39,76 @@
 <!--Main_content-->
     <main>
         <!--Accomodation-->
-        <section class="Accomodation">
-            <h2>Hébergements</h2>
-            <ul class="Accomodation_bloc">
+
+        <section >
+            <h2 id="accomodation">Hébergements à Marseille</h2>
+            <ul class='Accomodation_bloc'>
                 <li class="Accomodation_bloc1">
-                    <img src="" alt="">
+                    <img class="accomodation_images" src="/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Auberge la Cannebière</h3>
                     <p>Nuit à partir de 25€</p>
                     <i></i>
                 </li>
                 <li class="Accomodation_bloc2">
-                    <img src="" alt="">
+                    <img class="accomodation_images" src="/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel du port</h3>
                     <p>Nuit à partir de 52€</p>
                     <i></i>
                 </li>
                 <li class="Accomodation_bloc3"> 
-                    <img src="" alt="">
+                    <img class="accomodation_images" src="/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel Les Mouettes</h3>
                     <p>Nuit à partir de 76€</p>
                     <i></i>
                 </li>
                 <li class="Accomodation_bloc4">
-                    <img src="" alt="">
+                    <img class="accomodation_images" src="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel de la mer</h3>
                     <p>Nuit à partir de 46€</p>
                     <i></i>
                 </li>
                 <li class="Accomodation_bloc5">  
-                    <img src="" alt="">
+                    <img class="accomodation_images" src="/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel Le Panier</h3>
                     <p>Nuit à partir de 23€</p>
                     <i></i>
                 </li>
                 <li class="Accomodation_bloc6">
-                    <img src="" alt="">
+                    <img class="accomodation_images" src="/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Room photo">
                     <h3>Hôtel chez Aminar</h3>
                     <p>Nuit à partir de 96€</p>
                     <i></i>
                 </li>
             </ul>
+            <h4>Afficher plus</h4>
         </section>
         <!--Most_popular-->
-        <section class="most_popular">
+        <section id='most_popular'>
             <h2>Les plus populaires</h2>
             <ul class="most_popular_bloc">
                 <li class="most_popular_bloc1">
-                    <img src="" alt="">
+                    <img src="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Room photo">
                     <h3>Hôtel Le soleil du matin</h3>
                     <p>Nuit à partir de 128€</p>
                     <i></i></li>
                 <li class="most_popular_bloc2">
-                    <img src="" alt="">
+                    <img src="/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Room photo">
                     <h3>Au coeur de l'eau Chambre d'hôtes</h3>
                     <p>Nuit à partir de 71€</p>
                     <i></i>
                 </li>
                 <li class="most_popular_bloc3">
-                    <img src="" alt="">
-                    <h3></h3>
+                    <img src="/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Room photo">
+                    <h3>Hôtel Tout bleu et Blanc</h3>
                     <p>Nuit à partir de 68€</p>
                     <i></i>
                 </li>
             </ul>
         </section>
         <!--Activities-->
-        <section class="activities">
+        <section id="activities">
             <h2>Activités à Marseille</h2>
+            <div>
             <div class="activities_bloc1">
                 <img src="" alt="">
                 <h3>Vieux Port</h3>
@@ -109,6 +117,7 @@
                 <img src="" alt="">
                 <h3>Îles du Frioul</h3>
             </div>
+        </div>
             <div class="activities_bloc2"></div>
             <img src="" alt="">
                 <h3>Parc National des Calanques</h3>
@@ -124,7 +133,7 @@
     <footer>
         <div class="footer_items">
             <div class="about">
-                <h3>A propos</h3>
+                <h4>A propos</h4>
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
                     <li><a href="#">Conditions générales de vente</a></li>
@@ -132,14 +141,14 @@
                 </ul>
             </div>
             <div class="footer_accomodations">
-                <h3>Nos hébergements</h3>
+                <h4>Nos hébergements</h4>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
                     <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
             </div>
             <div class="assistance">
-                <h3>Assistance</h3>
+                <h4>Assistance</h4>
                 <ul>
                     <li><a href="#">Centre d'aide</a></li>
                     <li><a href="#">Nous contacter</a></li>
