--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/.../font.../5.14.0/css/all.css"/>
+    <script src="https://kit.fontawesome.com/9bbee46675.js" crossorigin="anonymous"></script>
     <title>Reservia</title>
 </head>
 
@@ -33,12 +33,13 @@
     <h1>Trouvez votre hébergements pour des vacances de rêve</h1>
     <p>En plein centre ville</p>
     <form method="POST" action="#" id="search">
-        <i></i>
+        <span class="icon_map">
+            <i class="fas fa-map-marker-alt"></i>
+        </span>
         <input type="search" class="search_box" placeholder="Marseille, France">
         <button type="submit" class="search_button">Rechercher</button>
-        <i class="">ICONE</i>
-         </button>
      </form>
+</div>
 <!-- Filters -->
      <div class="filters">
         <p>Filtres</p>
@@ -50,77 +51,160 @@
         </ul>
     </div>
     
-    <p>Plus de 500 logements disponibles dans cette ville</p>
+    <p><span class="icon_info"><i class="fas fa-info-circle"></i></span>Plus de 500 logements disponibles dans cette ville</p>
 </div>
 
 <!--Main_content-->
     <main>
         <!--Accomodation-->
 <div class="accomodation_and_most_popular">
-        <section id="accomodation">
-            <h2 >Hébergements à Marseille</h2>
-            <ul class='Accomodation_bloc'>
+    <section id="accomodation">
+
+        <h2 >Hébergements à Marseille</h2>
+        <ul class='Accomodation_bloc'>
+
+                <a href="#" class="card">
                 <li class="Accomodation_bloc1">
-                    <img class="accomodation_images" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo d'une chambre">
-                    <h3>Auberge la Cannebière</h3>
-                    <p>Nuit à partir de <strong>25€</strong> </p>
-                    <i></i>
-                </li>
-                <li class="Accomodation_bloc2">
+                <img class="accomodation_images" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo d'une chambre">
+                <h3>Auberge la Cannebière</h3>
+                <p>Nuit à partir de <strong>25€</strong> </p>
+            <div class="starRating">
+                <i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="fas fa-star"></i><i class="fas fa-star"></i
+                ><i class="greyStar fas fa-star"></i>
+                </div>
+                    </li>
+                </a>
+                
+                <a href="#" class="card">
+                <li class="Accomodation_bloc2" >
                     <img class="accomodation_images" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel du port</h3>
                     <p>Nuit à partir de <strong>52€</strong></p>
-                    <i></i>
+                    <div class="starRating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
                 </li>
+            </a>
+
+                <a href="#" class="card">
                 <li class="Accomodation_bloc3"> 
                     <img class="accomodation_images" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel Les Mouettes</h3>
                     <p>Nuit à partir de <strong>76€</strong></p>
-                    <i></i>
+                    <div class="starRating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="greyStar fas fa-star"></i>
+                    </div>
                 </li>
+            </a>
+
+                <a href="#" class="card">
                 <li class="Accomodation_bloc4">
                     <img class="accomodation_images" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel de la mer</h3>
                     <p>Nuit à partir de <strong>46€</strong></p>
-                    <i></i>
+                    <div class="starRating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="greyStar fas fa-star"></i>
+                        <i class="greyStar fas fa-star"></i>
+                    </div>
                 </li>
+            </a>
+
+                <a href="#" class="card">
                 <li class="Accomodation_bloc5">  
                     <img class="accomodation_images" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo d'une chambre">
                     <h3>Hôtel Le Panier</h3>
                     <p>Nuit à partir de <strong>46€</strong></p>
-                    <i></i>
+                    <div class="starRating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="greyStar fas fa-star"></i>
+                    </div>
                 </li>
-                <li class="Accomodation_bloc6">
+            </a>
+
+                <a href="#" class="card">
+                    <li class="Accomodation_bloc6">
                     <img class="accomodation_images" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Room photo">
                     <h3>Hôtel chez Aminar</h3>
                     <p>Nuit à partir de <strong>96€</strong></p>
-                    <i></i>
+                    <div class="starRating">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
                 </li>
+                </a>
             </ul>
             <h4>
                 <a href="#">Afficher plus</a></h4>
         </section>
         <!--Most_popular-->
         <section id='most_popular'>
-            <h2 class="most_popular_h2">Les plus populaires <i>icone</i></h2>
+            <h2 class="most_popular_h2">Les plus populaires
+                <div>
+                    <span class="fas fa-chart-line"></span>
+                  </div>
+            </h2>
             <ul class="most_popular_bloc">
+
+                <a href="#" class="card">
                 <li class="most_popular_bloc1">
                     <img class="most_popular_images" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Room photo">
                     <h3>Hôtel Le soleil du matin</h3>
                     <p>Nuit à partir de <strong>128€</strong></p>
-                    <i></i></li>
+                    <div class="icon_star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                      </div>
+                </li>
+            </a>
+
+            <a href="#" class="card">
                 <li class="most_popular_bloc2">
                     <img class="most_popular_images" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Room photo">
                     <h3>Au coeur de l'eau Chambre d'hôtes</h3>
                     <p>Nuit à partir de <strong>71€</strong></p>
-                    <i></i>
+                    <div class="icon_star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i> 
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="greyStar fas fa-star"></i>
+                    </div>
                 </li>
+                </a>
+
+                <a href="#" class="card">
                 <li class="most_popular_bloc3">
                     <img class="most_popular_images" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Room photo">
                     <h3>Hôtel Tout bleu et Blanc</h3>
                     <p>Nuit à partir de <strong>68€</strong></p>
-                    <i></i>
+                    <div class="starRating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="greyStar fas fa-star"></i>
+                      </div>
                 </li>
+            </a>
             </ul>
         </section>
     </div>
